--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^0.12.0",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
@@ -24,5 +26,8 @@
     "openai": "^4.96.0",
     "razorpay": "^2.9.5",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "@gradio/client": "^1.14.2"
   }
 }
